syntax = "proto3";

package greptime.v1;

import "greptime/v1/column.proto";
import "greptime/v1/common.proto";

message AdminRequest {
  string name = 1;
  repeated AdminExpr exprs = 2;
}

message AdminResponse {
  repeated AdminResult results = 1;
}

message AdminExpr {
  ExprHeader header = 1;
  oneof expr {
    CreateTableExpr create_table = 2;
    AlterExpr alter = 3;
    CreateDatabaseExpr create_database = 4;
    DropTableExpr drop_table = 5;
  }
}

message AdminResult {
  ResultHeader header = 1;
  oneof result {
    MutateResult mutate = 2;
  }
}

message CreateTableExpr {
  string catalog_name = 1;
  string schema_name = 2;
  string table_name = 3;
  string desc = 4;
  repeated ColumnDef column_defs = 5;
  string time_index = 6;
  repeated string primary_keys = 7;
  bool create_if_not_exists = 8;
  map<string, string> table_options = 9;
  TableId table_id = 10;
  repeated uint32 region_ids = 11;
}

message AlterExpr {
  string catalog_name = 1;
  string schema_name = 2;
  string table_name = 3;
  oneof kind {
    AddColumns add_columns = 4;
    DropColumns drop_columns = 5;
  }
}

message DropTableExpr {
  string catalog_name = 1;
  string schema_name = 2;
  string table_name = 3;
}

message CreateDatabaseExpr {
  //TODO(hl): maybe rename to schema_name?
  string database_name = 1;
}

message AddColumns {
  repeated AddColumn add_columns = 1;
}

message DropColumns {
  repeated DropColumn drop_columns = 1;
}

message AddColumn {
  ColumnDef column_def = 1;
  bool is_key = 2;
}

message DropColumn {
  string name = 1;
}

message TableId {
  uint32 id = 1;
}
